<resources>
    <string name="member_profil_url">http://199.167.29.25/page.php?aksi=myprofil</string>
    <string name="member_menubar_url">http://199.167.29.25/page.php?aksi=menubar</string>
    <string name="member_settingbar_url">http://199.167.29.25/page.php?aksi=settingbar</string>
    <string name="login_url">http://199.167.29.25/login.php</string>
    <string name="register_url">http://199.167.29.25/register.php</string>
    <string name="fp_url">http://199.167.29.25/fp.php</string>
    <string name="register_upload_player_foto">http://199.167.29.25/upload.php?mode=player_foto</string>
    <string name="register_upload_player_galeri">http://199.167.29.25/upload.php?mode=player_galeri</string>
    <string name="register_upload_player_link">http://199.167.29.25/upload.php?mode=player_link</string>
    <string name="register_upload_recruiter_foto">http://199.167.29.25/upload.php?mode=recruiter_foto</string>
    <string name="member_area_url">http://199.167.29.25/member.php</string>
    <string name="server_ip">199.167.29.25</string>
    <string name="app_name">IndoTalent</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_profile_chooser">ProfileChooser</string>
    <string name="login_member_login">MEMBER LOGIN</string>
    <string name="login_member_register_form">REGISTER FORM</string>
    <string name="login_member_forgot">Forgot Password ? Click Here</string>
    <string name="profile_choose">CHOOSE YOUR PROFILE</string>
    <string name="birthplace_prompt">Birthplace</string>
    <string name="day_prompt">day</string>
    <string name="month_prompt">month</string>
    <string name="year_prompt">year</string>
    <string name="favourite_position_prompt">Favourite Position</string>
</resources>