<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ringlayer.indotalent.RegisterPlayer">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/background"
    android:background="@drawable/bg"
        android:gravity="top|center_horizontal">


        <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

            <LinearLayout android:layout_width="0dp"
            android:layout_height="35dp"
            android:weightSum="2"
            android:gravity="left"
            android:layout_weight="1"
            android:orientation="horizontal">
                <ImageView
                android:id="@+id/back"
                android:layout_marginRight="4dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                android:layout_gravity="left"
                android:background="@drawable/back" />
            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
            android:layout_height="35dp"
            android:weightSum="2"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">
                <ImageView android:onClick="closeApplication"
                android:id="@+id/close"
                android:layout_marginRight="4dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                android:layout_gravity="right"
                android:background="@drawable/close" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="400dp"
        android:layout_height="650dp"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="@drawable/rounded">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="TALENTED PLAYER REGISTER"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Show Your Talent to World"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"></TextView>

            <EditText
                android:id="@+id/username"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_input_user"
                android:inputType="textPersonName"
                android:hint="Username"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"></TextView>

            <EditText
                android:id="@+id/password"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_input_user"
                android:inputType="textPassword"
                android:hint="Password"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"></TextView>

            <EditText
                android:id="@+id/email"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_input_user"
                android:inputType="textPersonName"
                android:hint="Email"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"></TextView>

            <EditText
                android:id="@+id/fullname"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_input_user"
                android:inputType="textPersonName"
                android:hint="fullname"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"></TextView>
            <Spinner
                android:id="@+id/birthplace"
                android:background="@drawable/rounded_input_user"
                android:layout_width="340dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:prompt="@string/birthplace_prompt" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"></TextView>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:paddingLeft="30dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <Spinner
                        android:id="@+id/day_player"
                        android:paddingLeft="4dp"
                        android:background="@drawable/rounded_input_user"
                        android:layout_width="100dp"
                        android:layout_gravity="center"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimary"
                        android:prompt="@string/day_prompt" />
                </LinearLayout>
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:paddingLeft="10dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <Spinner
                    android:id="@+id/month_player"
                    android:background="@drawable/rounded_input_user"
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:prompt="@string/month_prompt" />
                </LinearLayout>
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:orientation="vertical">
                    <Spinner
                    android:id="@+id/year_player"
                    android:background="@drawable/rounded_input_user"
                    android:layout_width="90dp"
                    android:layout_gravity="center"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:prompt="@string/year_prompt" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"></TextView>

            <EditText
                android:id="@+id/address"
                android:layout_width="340dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_input_user"
                android:inputType="text|textMultiLine"
                android:hint="Address"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"></TextView>

            <EditText
                android:id="@+id/phone_no"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_input_user"
                android:inputType="textPersonName"
                android:hint="Phone No"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"></TextView>
            <Spinner
                android:id="@+id/favourites_position"
                android:background="@drawable/rounded_input_user"
                android:layout_width="340dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:prompt="@string/favourite_position_prompt" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"></TextView>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="340dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <Button
                    android:background="@drawable/iconup"
                    android:layout_alignParentTop="true"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:id="@+id/upload_foto"
                    android:layout_height="wrap_content"
                    android:layout_width="50dp" />
                <Button
                    android:id="@+id/upload_foto_hint"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:text="Upload Your Photos" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="340dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <Button
                    android:background="@drawable/iconup"
                    android:layout_alignParentTop="true"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:id="@+id/upload_galeri_trophy"
                    android:layout_height="wrap_content"
                    android:layout_width="50dp" />
                <Button
                    android:id="@+id/upload_galeri_trophy_hint"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:text="Upload Your Trophy Galleries" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                />


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="340dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <Button
                    android:background="@drawable/iconlink"
                    android:layout_alignParentTop="true"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:id="@+id/upload_talent_video_link"
                    android:layout_height="wrap_content"
                    android:layout_width="50dp" />
                <Button
                    android:id="@+id/upload_talent_video_link_hint"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:text="Upload Your Talent Video Links" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"></TextView>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="340dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="230dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/simpan_player"
                    android:layout_width="100dp"
                    android:background="@color/ijo1"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="Simpan" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>